@@ -115,6 +115,8 @@ ONE_ZERO_SORT="-k1.5n"
 
 ZERO_ONE_OUTFILE_NAME=${RPTDIR}/bucket_zero_to_one.txt
 ZERO_ONE_SORT="-k1n"
+ZERO_ONE_MGIID_OUTFILE_NAME=${RPTDIR}/bucket_zero_to_one_mgiid.txt
+ZERO_ONE_NOMGIID_OUTFILE_NAME=${RPTDIR}/bucket_zero_to_one_nomgiid.txt
 
 CHR_MIS_OUTFILE_NAME=${RPTDIR}/bucket_mismatched_chr.txt
 CHR_MIS_SORT="-k1.5n"
@@ -127,6 +129,7 @@ export N_ONE_OUTFILE_NAME
 export N_M_OUTFILE_NAME
 export ONE_ZERO_OUTFILE_NAME ONE_ZERO_SORT
 export ZERO_ONE_OUTFILE_NAME ZERO_ONE_SORT
+export ZERO_ONE_MGIID_OUTFILE_NAME ZERO_ONE_NOMGIID_OUTFILE_NAME
 export CHR_MIS_OUTFILE_NAME CHR_MIS_SORT
 export GM_NOTIN_OUTFILE_NAME
 ###########################################################################
