@@ -12,6 +12,8 @@ Entrez Gene Mouse Load: Data, Logs and QC Reports
 <LI><A HREF="/data/loads/entrezgene/egload/reports/bucket_many_to_many.txt">Bucket many to many ... MGI has multiple records corresponding to multiple EG records. Needs Curator Review.</A>&nbsp;&nbsp;&nbsp;<A HREF="/data/loads/entrezgene/egload/reports/bucket_many_to_many.html"><font size="-1">(html formatted)</font></a></LI>
 <LI><A HREF="/data/loads/entrezgene/egload/reports/bucket_one_to_zero.txt">Bucket one to zero ... MGI has a Marker record - EG has none. </A>&nbsp;&nbsp;&nbsp;<A HREF="/data/loads/entrezgene/egload/reports/bucket_one_to_zero.html"><font size="-1">(html formatted)</font></a></LI>
 <LI><A HREF="/data/loads/entrezgene/egload/reports/bucket_zero_to_one.txt">Bucket zero to one ... MGI has no marker record - EG has a marker record  (Former Buckets 10, 11, 12). Needs Curator Review.</A>&nbsp;&nbsp;&nbsp;<A HREF="/data/loads/entrezgene/egload/reports/bucket_zero_to_one.html"><font size="-1">(html formatted)</font></a></LI>
+<LI><A HREF="/data/loads/entrezgene/egload/reports/bucket_zero_to_one_mgiid.txt">Bucket zero to one ... with MGI id association</A></LI>
+<LI><A HREF="/data/loads/entrezgene/egload/reports/bucket_zero_to_one_nomgiid.txt">Bucket zero to one ... with no MGI id association</A></LI>
 </UL><BR>
 <UL>
 <LI><a href="/data/loads/entrezgene/egload/reports/bucket_mismatched_chr.txt">One to one matches which were rejected due to mismatched chromosomes</a>&nbsp;&nbsp;&nbsp;<A HREF="/data/loads/entrezgene/egload/reports/bucket_mismatched_chr.html"><font size="-1">(html formatted)</font></a></LI>
